--- a/TradingJournal_React/ClientApp/package.json
+++ b/TradingJournal_React/ClientApp/package.json
@@ -13,6 +13,7 @@
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
     "react-hichestan-datetimepicker": "^2.0.15",
+    "react-notification-system": "^0.2.17",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
     "simple-react-notifications": "^1.2.16",
